# temporal_cafe_crawl

./: .gitignore  batch.txt  pyproject.toml
data/: cafe_list.jsonl
src/cafe/: crawl.py  crawl_all_cafe_list.py  crawl_cafe_basic_info.py  producer.py
