[project]
name = "cafe"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.55.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "boto3 (>=1.40.64,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "cafe.crawl:main"
